--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.bilibili.com/*"],
+      "run_at": "document_start",
       "js": ["inject.js"]
     }
   ],
