--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,9 @@
   "version": "0.1.1",
   "description": "__MSG_description__",
   "permissions": [],
+  "browser_action": {
+    "default_popup": "popup.html"
+  },
   "content_scripts": [
     {
       "matches": ["*://*.bilibili.com/*"],
