--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.bilibili.com/*"],
-      "run_at": "document_start",
+      "run_at": "document_end",
       "js": ["inject.js"]
     }
   ],
